Audio only loops once, and resets to default look afterwards

--- a/AEmain.html
+++ b/AEmain.html
@@ -56,9 +56,9 @@
             </div>
           </div>
 
-          <audio loop id="Perc" class="audio" src="http://www.maplelab.net/virtualPianist/AmplitudeEnv/Perc.mp3"></audio>
-          <audio loop id="Flat" class="audio" src="http://www.maplelab.net/virtualPianist/AmplitudeEnv/Flat.mp3"></audio>
-          <audio loop id="Rev" class="audio" src="http://www.maplelab.net/virtualPianist/AmplitudeEnv/Rev.mp3"></audio>
+          <audio id="Perc" class="audio" src="http://www.maplelab.net/virtualPianist/AmplitudeEnv/Perc.mp3"></audio>
+          <audio id="Flat" class="audio" src="http://www.maplelab.net/virtualPianist/AmplitudeEnv/Flat.mp3"></audio>
+          <audio id="Rev" class="audio" src="http://www.maplelab.net/virtualPianist/AmplitudeEnv/Rev.mp3"></audio>
   </body>
 
 </html>
