Added comments at top for credit and git

--- a/AEmain.html
+++ b/AEmain.html
@@ -1,3 +1,13 @@
+<!--
+Amplitude Envelope Demo
+
+Small audio/visual demo of Amplitude Envelopes
+MAPLE Lab, McMaster
+
+
+Written by Kyle Gauder
+Git Repo: https://github.com/gauderkd/AmpEnvelopeDemo
+-->
 <!DOCTYPE html>
 <html>
 
@@ -6,7 +16,7 @@
     <script src="https://maplelab.net/tools/AmpEnvelopeDemo/assets/lib/jquery-2.2.3.min.js"></script>
     <!--CSS-->
     <link rel="stylesheet" type="text/css"
-          href="https://maplelab.net/tools/AmpEnvelopeDemo/assets/css/AEstylesheet.css">
+          href="https://maplelab.net/tools/AmpEnvelopeDemo/assets/css/mainAE.css">
     <!--Javascript-->
     <script>
         var urlPrefix = "https://maplelab.net/tools/AmpEnvelopeDemo/";
